--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "tslint -p tsconfig.json",
     "lint-fix": "tslint --fix -p tsconfig.json",
     "start": "ts-node -r dotenv/config src/server.ts",
-    "test": "mocha -r ts-node/register ./tests/**/*.test.ts",
+    "test": "nyc mocha --compilers ts-node/register -r source-map-support/register --full-trace --bail ./test/**/*.test.ts",
     "serve": "node -r dotenv/config dist/src/server.js",
     "doc": "typedoc --out dist/docs --mode modules ./src",
     "build-docker": "yarn build && docker build -t graphql-server .",
@@ -39,10 +39,31 @@
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.10",
+    "nyc": "^13.3.0",
     "prettier": "^1.16.1",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "tslint-microsoft-contrib": "^6.0.0",
     "typescript": "^3.2.4"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.ts",
+      "src/**/*.tsx",
+      "tests/**/*.ts"
+    ],
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "require": [
+      "ts-node/register"
+    ],
+    "reporter": [
+      "text-summary",
+      "html"
+    ],
+    "sourceMap": true,
+    "instrument": true
   }
 }
