--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,15 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 4001
+      - "4001:4001"
     volumes:
       - "./:/app"
+#    environment:
+#      - SERVER_PORT=4001
+#      - MONGO_HOST=mongo
+#      - MONGO_PORT=27017
+#      - MONGO_DB=graphExample
+#      - NODE_ENV=production
     depends_on:
       - mongo
 
